# up-sfap

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
Algorithm/: Abstract.h  Abstract2.h  Baseline.h  Filter.h  HotStorage.h  Hyper.h  Ours.h  benchmark.h  onoffestima.h  onoffsketch.h  pasketch.h  pontus.h  psketch.h  ssketch.h
Ours/: sfap.h  sfapacc.h  sfapspeed.h  sfapspeedacc.h
common/: .Util.h.swp  StreamSummary2.h  Util.h  hash.h  trace.h
